-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.2, 5.1.0
-
None
-
OS X 10.8
If you press a modifier key and scroll with a mouse wheel the modifier key is not recognized.
It's working with a touchpad like the "Magic Trackpad".
It doesn't matter if one or more input devices are connected
It was working in Qt 4
To check this behavior you can overwrite the wheelEvent function of a QWidget like this:
void wheelEvent(QWheelEvent *event) {
if (QApplication::keyboardModifiers() & Qt::ShiftModifier) {
printf("shift + ");
}
if (event->modifiers() & Qt::ControlModifier) {
printf("ctrl + ");
}
if (event->modifiers() & Qt::AltModifier) {
printf("alt + ");
}
if (event->modifiers() & Qt::MetaModifier) {
printf("meta + ");
}
if (event->modifiers() & Qt::NoModifier) {
printf("no modifier + ");
}
static int tmp = 0;
printf("scrolling %d\n", tmp);
tmp++;
}